# dynbem

./: .gitignore  AGENTS.md  API.md  CLAUDE.md  Cargo.toml  EMPIRICAL_VALIDATION.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  run_map.cmd  setup.cmd  setup.sh
.github/workflows/: ci.yml  publish.yml
Research/: CLAUDE.md  extract_tables.py
Research/Buhl_NREL_TP500_36834/: extraction.md
Research/CaradonnaTung/: CLAUDE.md  deskew.py  format_tables.py  ocr_check_report.txt  ocr_numeric_issues.txt  ocr_suspects.txt  ocr_suspects_refined.txt  page_10_table_1.md  page_11_table_2.md  page_12_table_3.md  page_13_table_4.md  page_14_table_5.md  page_15_table_6.md  page_16_table_7.md  page_17_table_8.md  page_18_table_9.md  page_19_table_10.md  page_20_table_11.md  page_21_table_12.md  page_22_table_13.md  page_23_table_14.md  page_24_table_15.md  page_25_table_16.md  page_26_table_17.md  page_27_table_18.md  page_28_table_19.md  page_29_table_20.md  page_30_table_21.md  page_31_table_22.md  page_32_table_23.md  page_33_table_24.md  page_34_table_25.md  page_35_table_26.md  page_36_table_27.md  page_37_table_28.md  page_38_table_29.md  page_39_table_30.md  page_40_table_31.md  page_41_table_32.md  validate_tables.py
Research/Castles_TN2474/: abstract.md  naca0015_polar.md  page_32_table_i.md  page_33_table_ii.md  page_34_table_iii.md  page_35_table_iv.md  page_36_table_v.md  page_37_table_vi.md  page_38_table_vii.md  page_39_table_viii.md  page_42_figure_3.md  page_47_figure_8.md  page_51_figure_12.md  paper.md  summary.md
Research/NREL_Phase_VI/: CLAUDE.md
Research/NREL_Phase_VI/TP-500-43508/: fig4a_lss_torque.md  page_051_fig4a.md
Research/Peters_Nikolsky_2008/: CLAUDE.md
Research/Wheatley_Hood_NACA515/: CLAUDE.md  page_01.md  page_02.md  page_03.md  page_04.md  page_05.md  page_06.md  page_07.md  page_08.md  page_09_table_i.md  page_09_table_ii.md  page_10_table_iii.md  page_10_table_iv.md
Research/csv/CaradonnaTung/: page_10_table_1__cl.csv  page_10_table_1__lower_surface_cp.csv  page_10_table_1__upper_surface_cp.csv  page_11_table_2__cl.csv  page_11_table_2__lower_surface_cp.csv  page_11_table_2__upper_surface_cp.csv  page_12_table_3__cl.csv  page_12_table_3__lower_surface_cp.csv  page_12_table_3__upper_surface_cp.csv  page_13_table_4__cl.csv  page_13_table_4__lower_surface_cp.csv  page_13_table_4__upper_surface_cp.csv  page_14_table_5__cl.csv  page_14_table_5__lower_surface_cp.csv  page_14_table_5__upper_surface_cp.csv  page_15_table_6__cl.csv  page_15_table_6__lower_surface_cp.csv  page_15_table_6__upper_surface_cp.csv  page_16_table_7__cl.csv  page_16_table_7__lower_surface_cp.csv  page_16_table_7__upper_surface_cp.csv  page_17_table_8__cl.csv  page_17_table_8__lower_surface_cp.csv  page_17_table_8__upper_surface_cp.csv  page_18_table_9__cl.csv  page_18_table_9__lower_surface_cp.csv  page_18_table_9__upper_surface_cp.csv  page_19_table_10__cl.csv  page_19_table_10__lower_surface_cp.csv  page_19_table_10__upper_surface_cp.csv  page_20_table_11__cl.csv  page_20_table_11__lower_surface_cp.csv  page_20_table_11__upper_surface_cp.csv  page_21_table_12__cl.csv  page_21_table_12__lower_surface_cp.csv  page_21_table_12__upper_surface_cp.csv  page_22_table_13__cl.csv  (+59 more)
aero/: __init__.py  bem.py  cyclic.py  oye.py  pitt_peters.py  pitt_peters_jit.py  polar.py  rotor_definition.py  rotor_state.py  trim.py
dynbem/: CLAUDE.md  Cargo.toml  __init__.py  bem.py  pitt_peters.py  pyproject.toml  rotor_definition.py
dynbem/benchmarks/: bench_rust_only.py
dynbem/python/dynbem/: __init__.py  bem.py  cyclic.py  factory.py  mechanical.py  oye.py  pitt_peters.py  polar.py  rotor_definition.py  rotor_state.py  trim.py
dynbem/src/: conv.rs  lib.rs  trim_py.rs  wrappers.rs
dynbem_old/: _bem_common.py  bem.py  oye.py  pitt_peters_jit.py  polar.py  rotor_definition.py  rotor_state.py  trim.py
dynbem_rs/: CLAUDE.md  Cargo.toml  README.md
dynbem_rs/benches/: model_kernels.rs
dynbem_rs/src/: aero_io.rs  aero_model.rs  bem.rs  bem_common.rs  common.rs  cyclic.rs  lib.rs  oye.rs  pitt_peters.rs  polar.rs  quasi_static_bem.rs  rotor_definition.rs  rotor_state.rs  rotor_yaml.rs  trim.rs
envelope/: __init__.py  attitude_sim.py  axial_test.py  compute_map.py  point_mass.py
rotors/beaupoil_2026/: rotor.yaml
rotors/caradonna_tung/: naca0012_re1500k_n9.csv
rotors/castles_gray_6ft/: rotor.yaml
rotors/nrel_phase_vi/: rotor.yaml
rotors/wheatley_pca2/: rotor.yaml
tests/: helpers.py  test_attitude_sim.py  test_bem.py  test_bem_components.py  test_caradonna_spanwise.py  test_castles_gray.py  test_cyclic.py  test_dynbem_vs_ccblade.py  test_envelope.py  test_force_balance.py  test_oye.py  test_pitt_peters.py  test_pitt_peters_jit.py  test_polar.py  test_rotor_definition.py  test_rotor_state.py  test_trim.py  test_wheatley_autorotation.py  val_step1_hover.py  val_step2_hover_cq.py  val_step3_descent_ct.py  val_step4_fixed_theta.py  validate_table_i.py
verification/: __init__.py  caradonna_tung_spanwise_cl.py  castles_gray_table_i.py  dynbem_oye_vs_openfast_nrel_phase_vi.py  dynbem_polar_interp_check.py  dynbem_polar_vs_aerodyn_nrel_phase_vi.py  dynbem_qsbem_vs_xrotor_caradonna_tung.py  dynbem_vs_ccblade_beaupoil.py  dynbem_vs_ccblade_nrel_phase_vi.py  wheatley_hood_autorotation_torque.py
verification/ccblade_docker/: .dockerignore  Dockerfile  README.md  compose.yml  run.py
verification/data/: beaupoil_2026.csv  caradonna_tung_hover_openfast.csv  caradonna_tung_hover_xfoil_xrotor.csv  caradonna_tung_hover_xrotor.csv  dynbem_oye_vs_openfast_nrel_phase_vi.csv  dynbem_polar_vs_aerodyn_nrel_phase_vi.csv  dynbem_qsbem_vs_xrotor_caradonna_tung.csv  dynbem_qsbem_vs_xrotor_caradonna_tung_hover_xfoil.csv  nrel_phase_vi_dbemt_openfast.csv  nrel_phase_vi_dbemt_openfast_per_element.csv  nrel_phase_vi_seqS.csv  nrel_phase_vi_seqS_per_element.csv
verification/openfast_docker/: Dockerfile  README.md  compose.yml  run.py
verification/qblade_docker/: .gitignore  Dockerfile  README.md  compose.yml
verification/xrotor_docker/: Dockerfile  compose.yml  run.py
(+81 files in other folders)
