[workspace]
resolver = "2"
members = ["dynbem", "dynbem_rs"]

# Fields below are inherited by member crates via `field.workspace = true`.
[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Kristof"]
repository = "https://github.com/mcroomp/dynbem"
rust-version = "1.74"

[workspace.dependencies]
# Pinned versions used by the python-binding crate; kept here so any
# future workspace members touching pyo3 stay on the same revision.
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py310"] }
numpy = "0.22"
# YAML rotor-definition loader (dynbem_rs::rotor_yaml).
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

[profile.release]
lto = "thin"
codegen-units = 1
debug = true
strip = "none"

[profile.bench]
debug = true
strip = "none"
