[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aero"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["numpy"]
license = { file = "LICENSE" }
readme = "README.md"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
packages = ["aero"]
