[build-system]
requires = ["setuptools>=77", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "dynbem"
dynamic = ["version"]
description = "Blade-element momentum rotor aerodynamics with dynamic inflow (Pitt-Peters and Øye), covering the full operating envelope from helicopter hover through climb, descent, VRS, autorotation, and wind-turbine extraction in a single code path."
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "numba>=0.58",
    "scipy>=1.10",
]
keywords = ["rotor", "aerodynamics", "BEM", "blade-element-momentum", "dynamic-inflow", "Pitt-Peters", "Oye", "helicopter", "wind-turbine", "autorotation", "VRS"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
authors = [{ name = "Kristof" }]

[project.urls]
Homepage = "https://github.com/mcroomp/dynbem"
Repository = "https://github.com/mcroomp/dynbem"
Issues = "https://github.com/mcroomp/dynbem/issues"

[project.optional-dependencies]
yaml = ["PyYAML>=6"]
dev = ["pytest", "pytest-timeout", "PyYAML>=6", "build", "twine"]

[tool.setuptools]
packages = ["dynbem"]

[tool.setuptools_scm]
fallback_version = "0.0.0"

[tool.pytest.ini_options]
timeout = 10
