[project]
name = "aero-workspace"
version = "0.1.0"
description = "Repo-wide development environment for dynbem + dynbem_rs. Not published to PyPI; the publishable package is `dynbem/` (Rust-backed)."
requires-python = ">=3.11"
dependencies = [
    # Pulls in dynbem and PyYAML (needed by rotor_definition.load and the
    # repo's verification scripts). Numpy is a transitive dep of dynbem.
    "dynbem[yaml]",
]

[dependency-groups]
dev = [
    "pytest>=7",
    "pytest-timeout>=2",
    "maturin>=1.7,<2.0",
    "build",
    "twine",
]

# ---------------------------------------------------------------------------
# uv workspace. `uv sync` from the repo root installs dynbem in editable
# mode (which builds the Rust extension via maturin) plus PyYAML; add
# `--group dev` to also pull pytest et al.
#
# `dynbem_old/` is reference Python source and intentionally NOT a member
# (no pyproject.toml, not pip-installable). `dynbem_rs/` is a pure-Rust
# crate in the Cargo workspace at ./Cargo.toml.
# ---------------------------------------------------------------------------
[tool.uv.workspace]
members = ["dynbem"]

[tool.uv.sources]
dynbem = { workspace = true }

[tool.pytest.ini_options]
timeout = 10
testpaths = ["tests"]
