[package]
name = "dynbem"
description = "Python bindings (PyO3) for dynbem_rs: BEM / Pitt-Peters / Oye dynamic-inflow rotor models."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "_dynbem"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
dynbem_rs = { path = "../dynbem_rs" }
pyo3 = { workspace = true }
numpy = { workspace = true }
