[package]
name = "dynbem_rs"
description = "Pure-Rust BEM / Pitt-Peters / Oye dynamic-inflow rotor models. No pyo3 / numpy."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "dynbem_rs"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
aligned = "0.4"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "model_kernels"
harness = false

[[bin]]
name = "profile_kernels"
path = "bin/profile_kernels.rs"
